# 20230710USGS

./: .env  arg_unpacking.py  big_arrays.py  callable_instance.py  create_knight_xml.py  create_new_repo.py  custom_sorting.py  dict_comps.py  dynamic_classes.py  generator_expressions.py  git_add_commit.py  git_log.py  git_status.py  hello.py  higher_order_functions.py  itertools_chain.py  jonathan_api.py  knights.xml  list_comps.py  list_vs_dict.py  logging_decorator.py  mycustom.mplstyle  named_tuples.py  newsolar.xml  pastable.py  pres_by_state_counter.py  president.py  python.json  read_list_of_floats.py  script_template.py  simple_class.py  simple_generator_function.py  slice_examples.py  snakeutils.py  special_methods.py  split_string.py  stupid_gen_class.py  tuple_examples.py  use_mod.py  use_mod2.py  (+7 more)
ANSWERS/: add_columns.py  big_arrays.py  copy_files.py  count_all_lines.py  create_linear_space.py  create_range.py  deco_timer.py  doubledeco.py  energy_use_plot.py  fauxrange.py  fetch_xkcd_requests.py  fetch_xkcd_urllib.py  folder_scanner.py  maxlist.py  noaa_precip.py  parasites.py  pres_attr.py  pres_by_dob.py  pres_by_state.py  (+19 more)
EXAMPLES/: abstract_base_classes.py  adding_instance_methods.py  animal.py  apple.py  array_examples.py  attributes.py  banana.py  basic_auth_requests.py  basic_sorting.py  bm_all_sequence_types.py  bm_apply_to_list_vs_ndarray.py  bm_augmented_add.py  bm_indexing_function_return.py  bm_letter_counts.py  bm_list_comp_vs_append.py  bm_list_vs_ndarray.py  bm_listcmp_vs_genexpr.py  bm_merge_dicts.py  bm_range_vs_while.py  bm_set_vs_listcomp.py  bm_spam.py  bm_string_building.py  builder_pattern.py  builtin_containers.py  callable_class.py  carddeck.py  cherry.py  combinations_permutations.py  command_pattern.py  consume_omdb_async.py  consume_omdb_cf_procs.py  consume_omdb_cf_threads.py  consume_omdb_main.py  consume_omdb_procs.py  consume_omdb_serial.py  consume_omdb_threads.py  container_abc.py  coroutine_example.py  count_with_dict.py  creating_classes.py  (+171 more)
EXAMPLES/designpatterns/adapters/: cat_adapter.py
EXAMPLES/designpatterns/decorators/: deco_print_name.py  deco_print_name_with_label.py
EXAMPLES/designpatterns/singletons/singletonborg/: databaseconnection.py
EXAMPLES/designpatterns/singletons/singletonclassic/: builddb.py  databaseconnection.py  singleton_main.py
EXAMPLES/designpatterns/singletons/singletonmodule/: builddb.py  dbconn.py  singleton_main.py
EXAMPLES/designpatterns/strategies/simuduck/: duck.py  flylib.py  quacklib.py  simuduck_main.py
EXAMPLES/pytests/: pytest.ini  test_builtin_fixtures.py  test_custom_fixtures.py  test_mark.py  test_mock_pymock.py  test_mock_pymock_barbecue.py  test_mock_unittest.py  test_parametrization.py  test_simple.py  test_skip.py  test_special_assertions.py
EXAMPLES/pytests/stuff/: ORIG_conftest.py  conftest.py  test_stuff.py
EXAMPLES/temperature/: pyproject.toml  setup.py  temperature.py
EXAMPLES/temperature/src/: temperature.py
EXAMPLES/temperature/src/temperature/: convert.py
EXAMPLES/temperature/src/temperature.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
EXAMPLES/tests/: data_stuff.py  hamlib.py  pytest.ini  test_assertions.py  test_custom_fixtures.py  test_indirect_parametrization.py  test_mark.py  test_mock_data.py  test_mock_play.py  test_mock_pymock.py  test_mock_return_values.py  test_parametrization.py  test_simple.py  test_simple_fixture.py  test_special_assertions.py
EXAMPLES/tests/stuff/: ORIG_test_stuff.py
SETUP/cookiecutter-python-module/{{cookiecutter.module_slug}}/: pyproject.toml  setup.cfg
SETUP/cookiecutter-python-module/{{cookiecutter.module_slug}}/docs/source/: index.rst
SETUP/cookiecutter-python-module/{{cookiecutter.module_slug}}/tests/: test_{{cookiecutter.module_slug}}.py
mycoolmodule/: README.rst  pyproject.toml  setup.cfg  setup.py
mycoolmodule/docs/source/: conf.py  index.rst
mycoolmodule/src/mycoolmodule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mycoolmodule/tests/: test_mycoolmodule.py
(+67 files in other folders)
