# note -- this file is not required when building with pyproject.toml
[metadata]
name=temperature

version = 1.0.1
author = John Strickler
description = This is an example project
long_description = This is a longer description for the project
url = https://www.cjtech.com

[options.packages.find]
where=src

