# note -- this file is not required when building with pyproject.toml

[metadata]
name= {{cookiecutter.module_name}}

version = 1.0.0
author = {{cookiecutter.author_name}}
description = {{cookiecutter.module_description}}
long_description = Longer description for the project
url = {{cookiecutter.author_url}}

[options.packages.find]
where=src
